--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -147,7 +147,7 @@
   
         <section id="futureEvents">
           <h2>Future Events</h2>
-          <p>Stay tuned for upcoming chess tournaments and club activities.</~p>
+          <p>Stay tuned for upcoming chess tournaments and club activities.</p>
           <div id="calendar"></div>
         </section>
   
